# repo-evals

./: .gitignore  LICENSE  README.md  ROADMAP.md  SKILL.md
archetypes/: README.md
archetypes/adapter/: archetype.yaml  claim-map.yaml  eval-plan.md  evals.json.template
archetypes/api-service/: archetype.yaml  claim-map.yaml  eval-plan.md
archetypes/hybrid-skill/: archetype.yaml  eval-plan.md
archetypes/mcp-enhancement/: archetype.yaml  claim-map.yaml
archetypes/orchestrator/: archetype.yaml  claim-map.yaml  eval-plan.md
archetypes/prompt-skill/: archetype.yaml  claim-map.yaml  eval-plan.md
archetypes/pure-cli/: archetype.yaml  claim-map.yaml  eval-plan.md
dashboard/: all-evals.html  index.html  stars-page1-summary.html  zarazhangrui-summary.html
dashboard/assets/: app.js  style.css
dashboard/data/: index.json
dashboard/repos/: HughYau--qiushi-skill.html  Jamailar--RedBox.html  NanmiCoder--MediaCrawler.html  RKiding--Awesome-finance-skills.html  THU-MAIC--OpenMAIC.html  Usagi-org--ai-goofish-monitor.html  anthropics--skill-creator.html  autoclaw-cc--xiaohongshu-skills.html  brokermr810--QuantDinger.html  geekjourneyx--md2wechat-skill.html  gooseworks-ai--goose-skills.html  iamzhihuix--skills-manage.html  karpathy--autoresearch.html  nicobailon--visual-explainer.html  oaker-io--wewrite.html  obra--superpowers.html  op7418--Humanizer-zh.html  remotion-dev--skills.html  router-for-me--CLIProxyAPI.html  tukuaiai--tradecat.html  zarazhangrui--codebase-to-course.html  zarazhangrui--follow-builders.html  zarazhangrui--frontend-slides.html  zarazhangrui--personalized-podcast.html  (+6 more)
docs/: 2026-04-07-repo-evals-claude-implementation-prompt.md  2026-04-07-repo-evals-platform-roadmap.md  ARCHETYPES.md  CLAIM-EXTRACTION.md  COVERAGE-GAP-DETECTOR.md  DASHBOARD.md  EVIDENCE-COPIER.md  FIXTURE-REGISTRY.md  FRAMEWORK.md  IMPROVEMENT_PLAN.md  LAYERS.md  NAMING-CONVENTIONS.md  PROVENANCE.md  REEVAL-DIFF.md  VERDICT-BUCKETS.md  VERDICT-CALCULATOR.md
fixtures/: registry.yaml
repos/autoclaw-cc--xiaohongshu-skills/runs/2026-05-04/run-static-checks/artifacts/: SKILL.md  manifest.json  pyproject.toml
repos/tukuaiai--tradecat/runs/2026-05-04/run-static-checks/artifacts/: dataset_registry.json  install.sh  pyproject.toml  request.py  tui.py
scripts/: append-provenance.sh  archetypes.py  build_master_dashboard.py  copy-evidence.sh  coverage_gap_detector.py  extract_claims.py  fixtures.py  generate_dashboard.py  layers.py  new-area.sh  new-eval-harness.sh  new-repo-eval.sh  new-run.sh  reeval_diff.py  render_verdict_html.py  run_evals.py  trigger_test.py  verdict_calculator.py
tests/: test_archetypes.py  test_coverage_gap_detector.py  test_extract_claims.py  test_fixtures.py  test_generate_dashboard.py  test_layers.py  test_phase1_scripts.sh  test_reeval_diff.py  test_verdict_calculator.py
(+463 files in other folders)
