[project]
name = "tradecat-terminal"
version = "0.1.0"
description = "User-side TradeCat terminal panel backed by local snapshot cache files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TradeCat Team" }]
keywords = ["tradecat", "terminal", "tui", "snapshot-cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.7.0",
    "windows-curses>=2.4.0; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
tradecat = "tradecat_terminal.cli:main"
tradecat-terminal = "tradecat_terminal.cli:main"
tcat = "tradecat_terminal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradecat_terminal"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-q"]
